--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             app:leftButtonDrawable="@drawable/ic_search_24" />
         <ImageView
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:id="@+id/img_cart"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_baseline_shopping_cart_24"
