--- a/app/src/main/res/layout/activity_infomation.xml
+++ b/app/src/main/res/layout/activity_infomation.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue2"
     tools:context=".activity.InfomationActivity">
 
     <RelativeLayout
         android:id="@+id/layout_header"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/blue2">
+        android:layout_height="?actionBarSize"
+        android:background="@color/color_toolbar">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="@color/blue2"
             android:backgroundTintMode="screen"
-            android:src="@drawable/ic_back1" />
+            android:src="@drawable/ic_back_48"
+            app:tint="@color/white" />
 
         <TextView
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Thông tin cá nhân"
             android:textColor="@color/white"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
     </RelativeLayout>
 
     <ScrollView
@@ -37,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="550dp"
         android:layout_below="@+id/layout_header"
+        android:layout_above="@id/layout_footer"
         android:background="@drawable/boder_top">
 
         <LinearLayout
@@ -182,12 +183,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_info"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:id="@+id/layout_footer">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginTop="10dp"
             android:id="@+id/btn_Update"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
